修正JDK兼容性